feat: add conection railway

--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -3,7 +3,8 @@ spring:
     url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
     username: ${PGUSER}
     password: ${PGPASSWORD}
+    driver-class-name: org.postgresql.Driver
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
