--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
-
+tasks.jar {
+	manifest {
+		attributes["Main-Class"] = "org.api_FullStack.Application"
+	}
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
